--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@pulumi/digitalocean": "^4.16.0",
         "@pulumi/kubernetes": "^3.23.1",
-        "@pulumi/pulumi": "^3.0.0"
+        "@pulumi/pulumi": "^3.0.0",
+        "mongodb": "^4.13.0"
     }
 }
