--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,9 +18,7 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: ${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
+    - name: Build image
+      run: |
+        docker build -t faavour/my-backend-image:v1 -f ./Backend/Dockerfile ./Backend
+        docker build -t faavour/my-frontend-image:v1 -f ./Frontend/Dockerfile ./Frontend
