--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,3 +22,6 @@ jobs:
       run: |
         docker build -t faavour/my-backend-image:v1 -f ./Backend/Dockerfile ./Backend
         docker build -t faavour/my-frontend-image:v1 -f ./Frontend/Dockerfile ./Frontend
+
+    - name: Login to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
