--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,3 +25,15 @@ jobs:
 
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Push image to Docker Hub
+      run: |
+        docker push faavour/my-backend-image:v1
+        docker push faavour/my-frontend-image:v1
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    
+
+
