--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -13,5 +13,11 @@ spec:
     metadata:
       labels:
         app: frontend
-        api: external    
-        
+        api: external  
+    spec:
+      containers:
+      - image: faavour/udagram-frontend:v1
+        name: frontend
+        imagePullPolicy: Always          
+        ports:
+        - containerPort: 80  
