--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -16,8 +16,16 @@ spec:
         api: external  
     spec:
       containers:
-      - image: faavour/udagram-frontend:v1
+      - image: faavour/my-frontend-image:v1
         name: frontend
         imagePullPolicy: Always          
         ports:
         - containerPort: 80  
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "1024Mi"
+            cpu: "500m"                
+      restartPolicy: Always
