--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Build image
       run: |
         docker build -t faavour/my-backend-image:v1 ./Backend/Dockerfile 
-        docker build -t faavour/my-frontend-image:v1 -f ./Frontend/Dockerfile 
+        docker build -t faavour/my-frontend-image:v1 ./Frontend/ 
 
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
