fix: edit package.json

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/faavour/repository.git"
+    "url": "git://github.com/faavour/repository/Pulumi-project.git"
   }, 
   "keywords": [],
   "author": "",
