--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,10 @@
       "react-app/jest"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/faavour/repository.git"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
