--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "readme": "not publishing",
   "repository": {
     "type": "git",
     "url": "git://github.com/faavour/repository/Pulumi-project.git"
