--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,10 +21,7 @@ jobs:
     - name: Build image
       run: |
         docker build -t faavour/my-backend-image:v1 ./Backend/ 
-        docker build -t faavour/my-frontend-image:v1 ./Frontend/ 
-
-    - name: Login to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        docker build -t faavour/my-frontend-image:v1 -f ./Frontend/Dockerfile ./Frontend 
 
     - name: Push image to Docker Hub
       run: |
@@ -55,9 +52,8 @@ jobs:
     
     - name: Deploy to cluster
       run: |
-        kubectl set image deployment/backend backend=my-backend-image
-        kubectl set image deployment/frontend frontend=my-frontend-image
-
+        kubectl get deployment/backend 
+        kubectl get deployment/frontend
 
 
 
