--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,17 +12,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Build Backkend image
+      run: |
+        docker build -t faavour/my-backend-image:v1 ./Backend/ 
+        
+    - name: Build Frontend image
+      run: |
+         docker build -t faavour/my-frontend-image:v1 ./Frontend/
+
+
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Build image
-      run: |
-        docker build -t faavour/my-backend-image:v1 ./Backend/ 
-        docker build -t faavour/my-frontend-image:v1 -f ./Frontend/Dockerfile ./Frontend 
-
     - name: Push image to Docker Hub
       run: |
         docker push faavour/my-backend-image:v1
@@ -31,6 +35,7 @@ jobs:
 
 # This automatically deploys to Kubernetes
   deploy:
+    needs: build
     runs-on: ubuntu-latest
   
     steps:
@@ -53,7 +58,7 @@ jobs:
     - name: Deploy to cluster
       run: |
         kubectl get deployment/backend 
-        kubectl get deployment/frontend
+        kubectl get deployment/frontend 
 
 
 
