--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,51 +14,51 @@ jobs:
 
     - name: Build Backkend image
       run: |
-        docker build -t faavour/my-backend-image:v1 ./Backend/ 
+        docker build -t faavour/my-backend-image:v1 ./Backend/ && ls
         
-    - name: Build Frontend image
-      run: |
-         docker build -t faavour/my-frontend-image:v1 ./Frontend/
+    # - name: Build Frontend image
+    #   run: |
+    #      docker build -t faavour/my-frontend-image:v1 ./Frontend/
 
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    # - name: Login to DockerHub
+    #   uses: docker/login-action@v1
+    #   with:
+    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Push image to Docker Hub
-      run: |
-        docker push faavour/my-backend-image:v1
-        docker push faavour/my-frontend-image:v1
+    # - name: Push image to Docker Hub
+    #   run: |
+    #     docker push faavour/my-backend-image:v1
+    #     docker push faavour/my-frontend-image:v1
 
 
 # This automatically deploys to Kubernetes
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
   
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
 
-    - name: Configure kubectl
-      run: |
-        cat "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig.yaml
-        export KUBECONFIG=kubeconfig.yaml
+  #   - name: Configure kubectl
+  #     run: |
+  #       cat "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig.yaml
+  #       export KUBECONFIG=kubeconfig.yaml
 
-    - name: Install kubectl
-      run: |
-        sudo apt-get update && sudo apt-get install -y apt-transport-https
-        curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-        echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
-        sudo apt-get update
-        sudo apt-get install -y kubectl
+  #   - name: Install kubectl
+  #     run: |
+  #       sudo apt-get update && sudo apt-get install -y apt-transport-https
+  #       curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+  #       echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
+  #       sudo apt-get update
+  #       sudo apt-get install -y kubectl
     
-    - name: Deploy to cluster
-      run: |
-        kubectl get deployment/backend 
-        kubectl get deployment/frontend 
+  #   - name: Deploy to cluster
+  #     run: |
+  #       kubectl get deployment/backend 
+  #       kubectl get deployment/frontend 
 
 
 
