--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,21 +16,21 @@ jobs:
       run: |
         docker build -t faavour/my-backend-image:v1 ./Backend/ && ls
         
-    # - name: Build Frontend image
-    #   run: |
-    #      docker build -t faavour/my-frontend-image:v1 ./Frontend/
+    - name: Build Frontend image
+      run: |
+         docker build -t faavour/my-frontend-image:v1 ./frontend/
 
 
-    # - name: Login to DockerHub
-    #   uses: docker/login-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    # - name: Push image to Docker Hub
-    #   run: |
-    #     docker push faavour/my-backend-image:v1
-    #     docker push faavour/my-frontend-image:v1
+    - name: Push image to Docker Hub
+      run: |
+        docker push faavour/my-backend-image:v1
+        docker push faavour/my-frontend-image:v1
 
 
 # This automatically deploys to Kubernetes
