--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,7 @@ jobs:
     - name: Configure kubectl
       run: |
         cat "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig.yaml
+        cat kubeconfig.yaml
         export KUBECONFIG=kubeconfig.yaml
 
     - name: Install kubectl
